BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Server_Job_Status_vod__c.object
<CustomObject>
    <description>Status object for server batch jobs.</description>
    <fields>
        <fullName>Completed_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked by the background job once it has successfully or unsuccessfully completed.</description>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_On_Complete_vod__c</fullName>
        <description>Email address to notify when the job completes.</description>
        <label>Email on complete</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Errors_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of errors during the job. This value is updated by the job.</description>
        <label>Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Progress_vod__c</fullName>
        <description>A message indicating the progress of the job, updated by the job.</description>
        <label>Progress</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rows_Processed_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The running job updates this field with the number of rows already processed.</description>
        <label>Rows Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Run_Id_vod__c</fullName>
        <description>Autonumber to generate Run # for the Server Job Status record.  This value will be used to identify which records were aligned to allow for re-starting of processes in the event that they fail.</description>
        <displayFormat>R{000}</displayFormat>
        <label>Run Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status of the job (Processing, Finished or Failed). Set by the job.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starting</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tab_URL_vod__c</fullName>
        <description>This field stores the URL for the Territory Utilities web tab so it can be included in the email that is sent to the user on completion of a job.</description>
        <label>Tab URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Territories_vod__c</fullName>
        <description>List of top level territories from which the alignment started. Maximum of five comma delimited territories</description>
        <label>Territories</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Rows_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of rows to process for the job. This value is set by the job.</description>
        <label>Total Rows</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Server Job Status</label>
    <nameField>
        <label>Server Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Server Job Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>